End of refactor